fix for the overflow main content

--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -6,6 +6,8 @@
   margin-left: auto; margin-right: auto;
   justify-content: space-around;
   border: 1px solid black;
+  overflow-x: scroll;
+  overflow-y: scroll;
 }
 
 .left-sidebar {
@@ -18,6 +20,8 @@
 }
 
 .main-content {
+  overflow-x: scroll;
+  overflow-y: scroll;
   width: 60%;
   flex: 5;
   margin: 10px;
@@ -31,5 +35,7 @@
   display: flex;
   flex-direction: column;
   position: sticky;
-  margin: 5px
+  margin: 5px;
+  overflow-x: scroll;
+  overflow-y: scroll;
 }
